[package]
name = "wonky-rtos"
version = "0.1.0"
edition = "2024"

[dependencies]
ufmt = "0.2"
heapless = "0.9"
once_cell = { version = "1.21", default-features = false, features = ["critical-section"] }

avr-device = "0.8"
arduino-hal = { git = "https://github.com/rahix/avr-hal", features = ["arduino-nano"] }
embedded-hal = "1.0"
embedded-hal-bus = "0.3.0"

ina219 = { version = "0.2.1", features = ["sync"] }


[build-dependencies]
cc = "1"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"